--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ericdrewes/sql-massive-node.git"
-  },
-  "author": "",
+  "repository": "git+https://github.com/ericdrewes/sql-massive-node.git",
+  "author": "ericdrewes <eric.d.drewes@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ericdrewes/sql-massive-node/issues"
@@ -21,6 +18,6 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "massive": "^4.4.0"
+    "massive": "^4.5.0"
   }
 }
